--- a/scripts/r-scripts/0001-get-data.Rmd
+++ b/scripts/r-scripts/0001-get-data.Rmd
@@ -40,7 +40,7 @@ proteinID_unique <- unique(phi_proteinID) %>%
 
 After we made sure that there is no redundancy in our data, we can use the protein IDs data to retrieve the sequence amino acids sequence data on `uni-prot.org`, and we will get data in `.fatsa` file format. The protein IDs that we obtained from 'phi-base.org` is around 496 protein IDs, however only 482 that are succesfully mapped on `uni-prot.org`.
 
-![Uniprot Screnshoot](../../data/images/uniprot-screenshoot.png)
+![Uniprot Screnshoot](/data/images/uniprot-screenshoot.png)
 
 ### Reading and cleaning the data
 
