updated the lab book for december 2019

--- a/lab-book/2019-12-december.Rmd
+++ b/lab-book/2019-12-december.Rmd
@@ -166,7 +166,20 @@ Commits: `r gitlogr::get_git_commit_count(curr_date)`
 
 #### Worked on
 
+- investigated the bug on heatmap scripts (found that only conv1d_4 behaves differently, Ho: this is due to the fact that last convolutional layer is concatenation layer)
+- continued the process on getting the secreted protein data for different cases where the protein data does not have the Gene term and also if the protein data does not have genomic sequence in NCBI database. The script report is available on [0001_get_secreted_data.md](https://github.com/TeamMacLean/ruth-effectors-prediction/blob/master/reports/getting-data-secreted/0001_get_secreted_data.md)
 
+##  `r "2019-12-16" -> curr_date; get_formatted_date(curr_date)`
+
+Commits: `r gitlogr::get_git_commit_count(curr_date)`
+
+#### Worked on
+
+- completing report of heatmaps investigation for the strange behaviour on the last concatenation layer (`conv1d_4`)
+  
+  - [Heatmaps for CNN-GRU model](https://github.com/TeamMacLean/ruth-effectors-prediction/blob/master/scripts/jupyter-note/heatmaps/heatmap_cnn_gru.ipynb)
+  - [Heatmaps for CNN-LSTM model](https://github.com/TeamMacLean/ruth-effectors-prediction/blob/master/scripts/jupyter-note/heatmaps/heatmap_cnn_lstm.ipynb)
+  - [Heatmaps for fungi data on different layers of CNN-LSTM models](https://github.com/TeamMacLean/ruth-effectors-prediction/blob/master/scripts/jupyter-note/heatmaps/fungi-test/heatmap_cnn_lstm_fungi_test.ipynb)
 
 
 ***
