updated the lab book on 19th of January

--- a/lab-book/2019-12-december.Rmd
+++ b/lab-book/2019-12-december.Rmd
@@ -183,5 +183,26 @@ Commits: `r gitlogr::get_git_commit_count(curr_date)`
   
 - updated new function to retrive protein datasets
 
+##  `r "2019-12-17" -> curr_date; get_formatted_date(curr_date)`
+
+Commits: `r gitlogr::get_git_commit_count(curr_date)`
+
+#### Worked on 
+
+- added the function to get protein data from NCBI using geneID and get the genome sequence ID ===> this is wrong step, needs to get the data from EnsEMBL instead and also it has signal Peptide prediction already, so that perhaps does not need to use SignalP to predict the signal peptide 
+- tried to install SignalP 2.0 with Martin's help, but it can't be installed (the version is too old)
+- installing the biomaRt package and reading the documentation of biomaRt
+- understanding how the ensEMBL database works for each organism
+
+#### Weekly catch up meeting
+
+##### Effector and non-effector prediction
+
+- For the transfer learning, Dan agreed that I can go in getting data from previous research about effector prediction (effectorP for fungi), and others.  
+- Think about what it means with why some convolutional layers are differently activated. 
+- For retrieving data or in general, keep it in mind that if what we are doing is not specific in this topic, then there must be something has been developed before (need to develop a sense like this) -- ensEmbl database by EMBL.
+
+
+
 
 ***
