commit updated the getting sample data using new updated signalp prediction results

--- a/scripts/r-scripts/getting-secreted-data/0006_getting_sample_data.Rmd
+++ b/scripts/r-scripts/getting-secreted-data/0006_getting_sample_data.Rmd
@@ -1,28 +1,25 @@
-Selecting the secreted data randomly from the SignalP-Prediction results
-========================================================================
+---
+title: "Untitled"
+author: "Ruth Kristianingsih"
+date: "19/01/2020"
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding, output_dir = "../../../reports/getting-data-secreted") })
+output:
+  md_document:
+    variant: markdown_github
+---
 
-In this report, a process to get the secreted data randomly will be
-shown. First,
+# Selecting the secreted data randomly from the SignalP-Prediction results
 
-Function
---------
+In this report, a process to get the secreted data randomly will be shown. First, 
 
-``` r
+## Function
+
+```{r setup}
 library(tidyverse)
 ```
 
-    ## ── Attaching packages ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──
-
-    ## ✓ ggplot2 3.2.1     ✓ purrr   0.3.3
-    ## ✓ tibble  2.1.3     ✓ dplyr   0.8.3
-    ## ✓ tidyr   1.0.0     ✓ stringr 1.4.0
-    ## ✓ readr   1.3.1     ✓ forcats 0.4.0
-
-    ## ── Conflicts ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
-    ## x dplyr::filter() masks stats::filter()
-    ## x dplyr::lag()    masks stats::lag()
-
-``` r
+```{r}
 sample_from_lookup_table <- function(data, data_var, lookup, lookup_var) {
   # Create lookup pattern for base_name
   lookup_pattern <- lookup %>%
@@ -104,10 +101,10 @@ sample_from_lookup_table <- function(data, data_var, lookup, lookup_var) {
 }
 ```
 
-Bacteria
---------
 
-``` r
+## Bacteria
+
+```{r}
 # bacteria_lookup_table <- data.table::fread("../../../data/secreted_data/dataset-download-scripts/pathogen_species_final.csv") %>%
 #   `colnames<-`(c("Pathogenspecies", "Count")) %>%
 #   group_by(Pathogenspecies) %>%
@@ -120,7 +117,7 @@ Bacteria
 #   dplyr::filter(prediction == "Signal peptide", signalp_prob > 0.9)
 ```
 
-``` r
+```{r}
 # Read the full table pf the prediction result of the SignalP
 
 bacteria_full_table <- data.table::fread("../../../data/secreted_data/updated_signalp_results/bacteria_full_table.csv") %>%
@@ -170,69 +167,28 @@ bacteria_lookup_table <- bacteria_lookup_table %>%
   summarise(total_count = sum(total_count))
 ```
 
-``` r
+
+```{r}
 bacteria_non_eff_secreted_data  <- sample_from_lookup_table(
   data = bacteria_full_table,
   data_var = organism_name,
   lookup = bacteria_lookup_table,
   lookup_var = Pathogenspecies
 )
-```
 
-    ## Warning: Grouping rowwise data frame strips rowwise nature
-
-``` r
 bacteria_non_eff_secreted_data  %>% 
   saveRDS("../../../data/secreted_data/updated_signalp_results/bacteria_non_eff_secreted_data.RDS")
 ```
 
-``` r
+```{r}
 bacteria_lookup_table %>%
   knitr::kable()
 ```
 
-| Pathogenspecies                                              |  total\_count|
-|:-------------------------------------------------------------|-------------:|
-| clavibacter\_michiganensis\_subsp\_michiganensis\_ncppb\_382 |             2|
-| cystobacter\_fuscus\_dsm\_2262                               |             1|
-| erwinia\_amylovora\_cfbp1430                                 |            10|
-| pantoea\_stewartii                                           |             1|
-| pantoea\_stewartii\_subsp\_stewartii\_dc283                  |             1|
-| pseudomonas\_amygdali\_pv\_morsprunorum                      |             1|
-| pseudomonas\_amygdali\_pv\_tabaci                            |             1|
-| pseudomonas\_cichorii\_jbc1                                  |             1|
-| pseudomonas\_savastanoi\_pv\_phaseolicola                    |             5|
-| pseudomonas\_savastanoi\_pv\_phaseolicola\_1448a             |             6|
-| pseudomonas\_savastanoi\_pv\_savastanoi\_ncppb\_3335         |             1|
-| pseudomonas\_syringae                                        |             5|
-| pseudomonas\_syringae\_pv\_maculicola                        |             2|
-| pseudomonas\_syringae\_pv\_maculicola\_str\_es4326           |             2|
-| pseudomonas\_syringae\_pv\_maculicola\_str\_m6               |             1|
-| pseudomonas\_syringae\_pv\_pisi\_str\_1704b                  |             2|
-| pseudomonas\_syringae\_pv\_spinaceae                         |             1|
-| pseudomonas\_syringae\_pv\_syringae                          |             2|
-| pseudomonas\_syringae\_pv\_syringae\_b728a                   |            10|
-| pseudomonas\_syringae\_pv\_syringae\_gca\_001401075          |             1|
-| pseudomonas\_syringae\_pv\_tomato                            |             4|
-| pseudomonas\_syringae\_pv\_tomato\_str\_dc3000               |            29|
-| ralstonia\_solanacearum                                      |             5|
-| ralstonia\_solanacearum\_gmi1000                             |            40|
-| ralstonia\_solanacearum\_psi07                               |             1|
-| xanthomonas\_axonopodis\_pv\_citri\_str\_306                 |             7|
-| xanthomonas\_axonopodis\_pv\_manihotis                       |             1|
-| xanthomonas\_campestris\_pv\_campestris\_str\_8004           |             3|
-| xanthomonas\_campestris\_pv\_campestris\_str\_atcc\_33913    |             3|
-| xanthomonas\_campestris\_pv\_vesicatoria\_str\_85\_10        |            13|
-| xanthomonas\_citri\_pv\_malvacearum                          |             1|
-| xanthomonas\_oryzae\_pv\_oryzae                              |             7|
-| xanthomonas\_oryzae\_pv\_oryzae\_pxo99                       |             1|
-| xanthomonas\_oryzae\_pv\_oryzicola                           |             1|
-| xanthomonas\_oryzae\_pv\_oryzicola\_bls256                   |            15|
-| xylella\_fastidiosa\_temecula1                               |             3|
 
-Getting info from the sample data we got
+Getting info from the sample data we got 
 
-``` r
+```{r}
 bacteria_sample_data_count <- bacteria_non_eff_secreted_data  %>%
   group_by(organism_name) %>%
   summarise(count = n())
@@ -240,30 +196,14 @@ bacteria_sample_data_count <- bacteria_non_eff_secreted_data  %>%
 bacteria_sample_data_count
 ```
 
-    ## # A tibble: 36 x 2
-    ##    organism_name                                                     count
-    ##    <chr>                                                             <int>
-    ##  1 clavibacter_michiganensis_subsp_michiganensis_ncppb_382.asm6348v1     2
-    ##  2 cystobacter_fuscus_dsm_2262.asm33547v2                                1
-    ##  3 erwinia_amylovora_cfbp1430.asm9156v1                                 10
-    ##  4 pantoea_stewartii_subsp_stewartii_dc283.asm24839v2                    1
-    ##  5 pantoea_stewartii.asm78625v1                                          1
-    ##  6 pseudomonas_amygdali_pv_morsprunorum.pmpftrs_u7805                    1
-    ##  7 pseudomonas_amygdali_pv_tabaci.asm93464v1                             1
-    ##  8 pseudomonas_cichorii_jbc1.asm51730v1                                  1
-    ##  9 pseudomonas_savastanoi_pv_phaseolicola_1448a.asm1220v1                6
-    ## 10 pseudomonas_savastanoi_pv_phaseolicola.pphy5_2                        5
-    ## # … with 26 more rows
-
 ### Check the debug on the sampling data
 
-We can check here if there is missing data when we sampling the data
-randomly. This can due to:
+We can check here if there is missing data when we sampling the data randomly. This can due to:
 
--   There is no enough predicted sequence with signalp
--   Or this can due to the
+- There is no enough predicted sequence with signalp
+- Or this can due to the
 
-``` r
+```{r}
 bacteria_matched_organisms_name <- left_join(
   bacteria_lookup_table %>%
     dplyr::mutate_at(
@@ -284,16 +224,11 @@ bacteria_matched_organisms_name  %>%
   knitr::kable()
 ```
 
-| base\_names |  total\_count\_src| organism\_name |
-|:------------|------------------:|:---------------|
+From the results above, as we can see, there is no pathogen organism with missing data. It means that organisms names are mapped. 
 
-From the results above, as we can see, there is no pathogen organism
-with missing data. It means that organisms names are mapped.
+## Fungi
 
-Fungi
------
-
-``` r
+```{r}
 fungi_lookup_table <- data.table::fread("../../../data/secreted_data/signalp-pipeline/fungi_lookup_table.csv", drop = "V1") %>%
   `colnames<-`(c("Pathogenspecies", "total_count"))
 
@@ -324,7 +259,10 @@ fungi_full_table <-
   dplyr::filter(prediction == "Signal peptide", signalp_prob > 0.9)
 ```
 
-``` r
+
+
+
+```{r}
 # Getting all of the organism name consistent
 
 # Results table
@@ -336,25 +274,22 @@ fungi_full_table <- fungi_full_table %>%
   )
 ```
 
-``` r
+
+```{r}
 fungi_non_eff_secreted_data <- sample_from_lookup_table(
   data = fungi_full_table,
   data_var = organism_name,
   lookup = fungi_lookup_table,
   lookup_var = Pathogenspecies
 )
-```
 
-    ## Warning: Grouping rowwise data frame strips rowwise nature
-
-``` r
 fungi_non_eff_secreted_data %>% 
   saveRDS("../../../data/secreted_data/updated_signalp_results/fungi_non_eff_secreted_data.RDS")
 ```
 
 ### Checking the debug
 
-``` r
+```{r}
 fungi_non_eff_secreted_count <- fungi_non_eff_secreted_data %>% 
   group_by(organism_name) %>% 
   summarise(count = n())
@@ -362,11 +297,7 @@ fungi_non_eff_secreted_count <- fungi_non_eff_secreted_data %>%
 fungi_non_eff_secreted_count %>% 
   dplyr::select(count) %>% 
   sum()
-```
 
-    ## [1] 97
-
-``` r
 # Compare the lookup table and the result of sampling
 data.frame(table = c("result", "lookup"), 
            count_seq = c(fungi_non_eff_secreted_count %>% select(count) %>% 
@@ -375,11 +306,7 @@ data.frame(table = c("result", "lookup"),
                            sum()))
 ```
 
-    ##    table count_seq
-    ## 1 result        97
-    ## 2 lookup       113
-
-``` r
+```{r}
 fungi_debug <- left_join(
   fungi_lookup_table %>%
     dplyr::mutate_at(
@@ -396,19 +323,7 @@ fungi_debug %>%
   slice(1) %>% 
   filter(is.na(organism_name)) %>%
   select(base_names, total_count_src, organism_name)
-```
 
-    ## # A tibble: 5 x 3
-    ## # Groups:   base_names [5]
-    ##   base_names                total_count_src organism_name
-    ##   <chr>                               <int> <chr>        
-    ## 1 cercospora_apii                         1 <NA>         
-    ## 2 melampsora_lini                         5 <NA>         
-    ## 3 parastagonospora_nodorum                2 <NA>         
-    ## 4 passalora_fulva                         7 <NA>         
-    ## 5 pseudocercospora_fuligena               1 <NA>
-
-``` r
 not_available_fungi <- fungi_debug %>% 
   group_by(organism_name, base_names) %>% 
   summarise(count_organism = n()) %>% 
@@ -421,18 +336,12 @@ not_available_fungi %>%
   knitr::kable()
 ```
 
-| organism\_name | base\_names                |  count\_organism|
-|:---------------|:---------------------------|----------------:|
-| NA             | cercospora\_apii           |                1|
-| NA             | melampsora\_lini           |                1|
-| NA             | parastagonospora\_nodorum  |                1|
-| NA             | passalora\_fulva           |                1|
-| NA             | pseudocercospora\_fuligena |                1|
 
-Oomycete
---------
 
-``` r
+## Oomycete
+
+
+```{r}
 oomycete_lookup_table <- data.table::fread("../../../data/secreted_data/signalp-pipeline/oomycete_lookup_table.csv") %>% `colnames<-`(c("Pathogenspecies", "total_count"))
 
 
@@ -443,7 +352,7 @@ oomycete_full_table <-
   dplyr::filter(prediction == "Signal peptide", signalp_prob > 0.9)
 ```
 
-``` r
+```{r}
 # Getting all of the organism name consistent
 
 # Lookup table
@@ -464,23 +373,20 @@ oomycete_full_table <- oomycete_full_table %>%
   )
 ```
 
-``` r
+```{r}
 oomycete_non_eff_secreted_data <- sample_from_lookup_table(
   data = oomycete_full_table,
   data_var = organism_name,
   lookup = oomycete_lookup_table,
   lookup_var = Pathogenspecies
 )
-```
 
-    ## Warning: Grouping rowwise data frame strips rowwise nature
-
-``` r
 oomycete_non_eff_secreted_data %>% 
   saveRDS("../../../data/secreted_data/updated_signalp_results/oomycete_non_eff_secreted_data.RDS")
 ```
 
-``` r
+
+```{r}
 oomycete_debug <- left_join(
   oomycete_lookup_table %>%
     dplyr::mutate_at(
@@ -500,13 +406,12 @@ not_available_oomycete_list <-
   select(base_names)
 ```
 
-Summary
--------
 
-Checking how many sequence data each pathogen has
--------------------------------------------------
+## Summary 
 
-``` r
+## Checking how many sequence data each pathogen has
+
+```{r}
 effector_data_info <- readRDS("../../../data/secreted_data/data_processed_after_signalp/effector_data_info.RDS")
 
 effector_data_info %>%
@@ -514,19 +419,10 @@ effector_data_info %>%
   summarise(count_class = n())
 ```
 
-    ## # A tibble: 5 x 2
-    ##   class    count_class
-    ##   <fct>          <int>
-    ## 1 bacteria         190
-    ## 2 fungi            113
-    ## 3 insecta            2
-    ## 4 nematoda           2
-    ## 5 oomycete          95
+After getting the info above, now needs to check the sum of total sequence in lookup table, to make sure that the total is consistent.
 
-After getting the info above, now needs to check the sum of total
-sequence in lookup table, to make sure that the total is consistent.
 
-``` r
+```{r}
 data.frame(
   pathogen = c("bacteria", "fungi", "oomycete"),
   num_seq = c(
@@ -537,14 +433,9 @@ data.frame(
 )
 ```
 
-    ##   pathogen num_seq
-    ## 1 bacteria     190
-    ## 2    fungi     113
-    ## 3 oomycete      95
-
 #### Bacteria
 
-``` r
+```{r}
 num_seq_retrieved <- bacteria_non_eff_secreted_data %>% 
   nrow()
 
@@ -558,16 +449,14 @@ data.frame(desc = c("retrieved_seq", "lookup_table_seq"),
   knitr::kable()
 ```
 
-| desc               |  count|
-|:-------------------|------:|
-| retrieved\_seq     |    190|
-| lookup\_table\_seq |    190|
+
 
 #### Fungi
 
-List of fungi that does not exist
+List of fungi that does not exist 
 
-``` r
+
+```{r}
 num_seq_retrieved <- fungi_non_eff_secreted_count %>% 
   select(count) %>% 
   sum()
@@ -587,15 +476,11 @@ data.frame(desc = c("retrieved_seq", "lookup_table_seq", "na_seq"),
   knitr::kable()
 ```
 
-| desc               |  count|
-|:-------------------|------:|
-| retrieved\_seq     |     97|
-| lookup\_table\_seq |    113|
-| na\_seq            |     16|
 
 #### Oomycete
 
-``` r
+
+```{r}
 num_seq_retrieved <- oomycete_non_eff_secreted_data %>% 
   nrow()
 
@@ -613,8 +498,6 @@ data.frame(desc = c("retrieved_seq", "lookup_table_seq", "na_seq"),
   knitr::kable()
 ```
 
-| desc               |  count|
-|:-------------------|------:|
-| retrieved\_seq     |     85|
-| lookup\_table\_seq |     95|
-| na\_seq            |     10|
+
+
+
