--- a/lab-book/2020-01-january.Rmd
+++ b/lab-book/2020-01-january.Rmd
@@ -90,7 +90,8 @@ Commits: `r gitlogr::get_git_commit_count(curr_date)`
 
 ##### Effector and non-effector prediction
 
-- 
+- Base factor method can be applied at the end of the pipeline, to see better the likelihood of two distribution
+- continue with the data splitting - encoding and train the data
 
 
 #### Worked on
@@ -125,6 +126,36 @@ Commits: `r gitlogr::get_git_commit_count(curr_date)`
 - Updated [Process signalp prediction results](https://github.com/TeamMacLean/ruth-effectors-prediction/blob/master/reports/getting-data-secreted/0005_process_signalp_data.md), there are several bash scripts used to run this pipeline and [report on blast-ing the negative datasets using the newest SignalP prediction results](https://github.com/TeamMacLean/ruth-effectors-prediction/blob/master/reports/getting-data-secreted/0007_blast_result_random_sampling.md) 
 
 - created a scripts in .R scripts to label the data into binary and multiclass classification, and also function to to split the data into different datasets
+
+
+##  `r "2020-01-27" -> curr_date; get_formatted_date(curr_date)`
+
+Commits: `r gitlogr::get_git_commit_count(curr_date)`
+
+#### Worked on
+
+- Tuning the bacteria splitting and blasting function
+- Encoding the data set for oomycete and fungi
+- Making the the scripts CNN-LSTM and CNN-GRU for oomycete and fungi
+
+##  `r "2020-01-28" -> curr_date; get_formatted_date(curr_date)`
+
+Commits: `r gitlogr::get_git_commit_count(curr_date)`
+
+#### Weekly catch up-meeting
+
+##### Effector prediction 
+
+- Wrong method in randomly sampling data --> should have done BLAST while selecting for the sequences, not in splitting data. Dan's method:
+
+![Getting sample of sequences](figures/IMG_8790.jpg)
+
+- After getting all of the data, continue doing the hyperparameter scan for all of the new datasets (with the Cross-Validation of of course since the data is very small. It will help.)
+
+##### Subcellular - Localisation
+
+- trying to do ensembling and see how it will help to improve the perfomance 
+
 
 
 
